--- a/frontend/views/sobreNos.html
+++ b/frontend/views/sobreNos.html
@@ -21,7 +21,7 @@
 
             <div class="frame7">
                 <div class="frame8">
-                    <a href="./index.html">inicio</a>
+                    <a href="../../index.html">inicio</a>
                 </div>
 
                 <div class="frame10">
