--- a/frontend/views/sobreNos.html
+++ b/frontend/views/sobreNos.html
@@ -8,66 +8,90 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/home.css">
-    <title>SOBRE NOS</title>
+    <link rel="stylesheet" href="../css/sobreNos.css">
+    <title>Z-TECH | Sobre nós</title>
+    <link rel="icon" type="image/x-icon" href="../image/favicon.ico">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 
 <body>
-    <nav class="frame4">
-        <div class="frame3">
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">
             <div class="frame65">
                 <img src="../image/logo.svg" alt="Logo" width="90" height="62.1">
-                <p class="" href="#" style="color:white ;">Z-TECH</p>
+                <a class="" href="index.html" style="color:white ;text-decoration: none;">Z-TECH</a>
             </div>
-
-            <div class="frame7">
-                <div class="frame8">
-                    <a href="../../index.html">inicio</a>
-                </div>
-
-                <div class="frame10">
-                    <p>sobre nós</p>
-                </div>
-
-                <div class="frame9">
-                    <p>ver estatisticas</p>
-                </div>
-
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mb-2 mb-lg-0" style="margin-left: auto; align-items: center; padding: 0px 30px;">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="../../index.html">início</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="sobreNos.html">sobre nós</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="estatisticas.html">ver estatísticas</a>
+                    </li>
+                    </li>
+                </ul>
             </div>
-
         </div>
-
     </nav>
 
-    
+
+
     <br>
     <br>
     <br>
     <br>
     <br>
 
-    <header>
+    <header class="">
         <div class="row">
-            <div class="col">
-                <div class="d-flex align-items-center">
-                    <img src="../image/Lua.svg" alt="Planeta Terra">
-
-                    <div>
-                        <h1 class="textLadingPage">Nos ajude a monitorar o Sol!</h1>
-                        <div class="d-flex gap-3">
-                            <button class="button1 border-0">Ver estatistivas</button>
-                            <button class="button2 border-0">Doar</button>
-                        </div>
-
+            <div class="col col-sm-12">
+                <div class="row align-items-center justify-content-between">
+                    <div class="col-sm-12 col-md-4 col-lg-4">
+                        <img src="../image/Lua.svg" alt="Lua">
                     </div>
+                    <div class="col-sm-12 col-md-4 col-lg-4">
+                        <div class="container">
+                            <div class="align-items-center ">
+                                <h1 class="textLadingPage">Para chegar até o espaço, foi necessario uma tripulação!</h1>
+                                <div class="d-flex gap-3 justify-content-center">
+
+                                    <div class="col-sm-12 col-md-12">
+                                        <div class="row">
+                                            <div class="col-sm-12 col-md-12 col-lg-6"><button
+                                                    class="button1 border-0"><i class="fa fa-bar-chart" aria-hidden="true"></i> Ver
+                                                    estatísticas</button></div>
+                                            <div class="col-sm-12 col-md-12 col-lg-6"><button
+                                                    class="button2 border-0"><i class="fa fa-money" aria-hidden="true"></i> Doar</button></div>
+                                        </div>
+                                    </div>
+
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-12 col-md-4 col-lg-4">
+                        <img class="imageAstronauta" src="../image/Foquete.svg" alt="Astronauta">
+                    </div>
+
                 </div>
+
             </div>
 
-            <div class="col">
-                <img class="imageAstronauta" src="../image/Foquete.svg" alt="Astronauta">
-            </div>
+
 
         </div>
-
         <br>
         <br>
         <br>
@@ -75,35 +99,193 @@
         <hr class="rowWhite">
 
         <div class="d-flex justify-content-center textoCalc">
-            <div class="frame12">
-                <div class="frame71">
-                    <p>100K</p>
-                    <p>acessos</p>
+            <div class="col-sm-12">>
+                <div class="row frame12">
+                    <div class="col-sm-12 col-md-3">
+                        <div class="frame71">
+                            <p class="numeracao-info">100K</p>
+                            <p class="decricao-info">acessos</p>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-3">
+                        <div class="frame72">
+                            <p class="numeracao-info">100</p>
+                            <p class="decricao-info">previsões</p>
+
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-3">
+                        <div class="frame73">
+                            <p class="numeracao-info">85%</p>
+                            <p class="decricao-info">acertado</p>
+
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-3">
+                        <div class="frame74">
+                            <p class="numeracao-info">15%</p>
+                            <p class="decricao-info">errado</p>
+
+                        </div>
+                    </div>
                 </div>
-
-                <div class="frame72">
-                    <p>100</p>
-                    <p>previsões</p>
-
-                </div>
-
-                <div class="frame73">
-                    <p>85%</p>
-                    <p>acertado</p>
-
-                </div>
-
-                <div class="frame74">
-                    <p>15%</p>
-                    <p>errado</p>
-
-                </div>
-
             </div>
+        </div>
 
+        <!--Membros da tripulação-->
+        <div class="Membros">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <h1 class="title-sobrenos">Membros da tripulação</h1>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12">
+                        <p class="descicao-sobrenos">A partir do evento que aconteceu em 1859, surgiu a necessidade de
+                            rastrear e acompanhar as
+                            mudanças
+                            que
+                            ocorrem na maior estrela do sistema solar, o Sol. Isso porque, se naquela época houveram
+                            problemas
+                            com
+                            as tecnologias, no mundo atual, altamente tecnológico, poderia ser uma catástrofe. Por conta
+                            disso,
+                            criamos essa plataforma de conscientização e exploração dos eventos solares para qualquer
+                            indivíduo
+                            poder acessar. Sendo a equipe responsável pelo desenvolvimento:
+                        </p>
+                    </div>
+                </div>
+                <br>
+
+                <div class="row">
+                    <div class="col-sm-12 col-md-6">
+                        <div class="cardMember">
+                            <div class="row align-items-center">
+                                <div class="col-sm-12 col-md-6 col-lg-4">
+                                    <img class="cardMember-img" src="../image/Abner_Silva (5) (1).svg" alt="Abner Silva Barbosa">
+                                </div>
+                                <div class="col-sm-12 col-md-6 col-lg-8">
+                                    <p class="card-name"><strong>Abner Silva Barbosa</strong></p>
+                                    <p class="card-cargo">Analista de Dados <span>&</span> Programador</p>
+                                    <p class="card-email">abner.barbosa@sou.inteli.edu.br</p>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-6">
+                        <div class="cardMember">
+                            <div class="row align-items-center">
+                                <div class="col-sm-12 col-md-6 col-lg-4">
+                                    <img class="cardMember-img" src="../image/Gustavo_Ferreira_de_Oliveira (8).svg" alt="Gustavo Ferreira de Oliveira">
+                                </div>
+                                <div class="col-sm-12 col-md-6 col-lg-8">
+                                    <p class="card-name"><strong>Gustavo Ferreira de Oliveira</strong></p>
+                                    <p class="card-cargo">Designer <span>&</span> Programador</p>
+                                    <p class="card-email">gustavo.oliveira@sou.inteli.edu.br</p>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-6">
+                        <div class="cardMember">
+                            <div class="row align-items-center">
+                                <div class="col-sm-12 col-md-6 col-lg-4">
+                                    <img class="cardMember-img" src="../image/Julia_Rodrigues_Togni (10).svg" alt="Julia Rodrigues Togni">
+                                </div>
+                                <div class="col-sm-12 col-md-6 col-lg-8">
+                                    <p class="card-name"><strong>Julia Rodrigues Togni</strong></p>
+                                    <p class="card-cargo">Programadora <span>&</span> UX Writer</p>
+                                    <p class="card-email">julia.togni@sou.inteli.edu.br</p>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-6">
+                        <div class="cardMember">
+                            <div class="row align-items-center">
+                                <div class="col-sm-12 col-md-6 col-lg-4">
+                                    <img class="cardMember-img" src="../image/Rafael_Alves_Cabral (6).svg" alt="Rafael Alves Cabral">
+                                </div>
+                                <div class="col-sm-12 col-md-6 col-lg-8">
+                                    <p class="card-name"><strong>Rafael Alves Cabral</strong></p>
+                                    <p class="card-cargo">Analista de Negócios</p>
+                                    <p class="card-email">rafael.cabral@sou.inteli.edu.br</p>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-6">
+                        <div class="cardMember">
+                            <div class="row align-items-center">
+                                <div class="col-sm-12 col-md-6 col-lg-4">
+                                    <img class="cardMember-img" src="../image/Vitor_Zeferino (12) 1.svg" alt="Vitor Zeferino Queiroz">
+                                </div>
+                                <div class="col-sm-12 col-md-6 col-lg-8">
+                                    <p class="card-name"><strong>Vitor Zeferino Queiroz</strong></p>
+                                    <p class="card-cargo">Analista de Negócios & Dados</p>
+                                    <p class="card-email">vitor.queiroz@sou.inteli.edu.br</p>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                </div>
+            </div>
         </div>
     </header>
 
+
+    <footer class="frame44">
+        <nav>
+            <div class="col-sm-12">
+                <div class="frame3">
+                    <div class="row">
+                        <div class="col-sm-12 col-md-10">
+                            <div class="frame65">
+                                <img src="../image/logo.svg" alt="Logo" width="90" height="62.1">
+                                <p class="" href="#" style="color:white ;">Z-TECH</p>
+                            </div>
+                            <p class="texto-slogan">Ser um explorador da galaxia é mais do que possivel!</p>
+                        </div>
+
+
+                        <div class="col-sm-12 col-md-2">
+                            <div class="menu-footer">
+                                <h2 class="menu-title"><strong>Menu</strong></h2>
+                                <div class="menu-list">
+                                    <p>sobre nós</p>
+                                    <p>contato</p>
+                                    <p>ver estatistica</p>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </nav>
+        <hr>
+        <p class="copyDi">©2022 Z-TECH. Todos os direitos reservado</p>
+
+    </footer>
+
+
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js">
+</script>
+<script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js">
+</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/js/bootstrap.min.js">
+</script>
+<script src="../js/script.js">
+</script>
 
 </html>
