--- a/frontend/views/sobreNos.html
+++ b/frontend/views/sobreNos.html
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/home.css">
     <link rel="stylesheet" href="../css/sobreNos.css">
     <title>Z-TECH | Sobre nós</title>
@@ -20,7 +24,7 @@
         <div class="container-fluid">
             <div class="frame65">
                 <img src="../image/logo.svg" alt="Logo" width="90" height="62.1">
-                <a class="" href="index.html" style="color:white ;text-decoration: none;">Z-TECH</a>
+                <a class="" href="../../index.html" style="color:white ;text-decoration: none;">Z-TECH</a>
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -68,10 +72,12 @@
                                     <div class="col-sm-12 col-md-12">
                                         <div class="row">
                                             <div class="col-sm-12 col-md-12 col-lg-6"><button
-                                                    class="button1 border-0"><i class="fa fa-bar-chart" aria-hidden="true"></i> Ver
+                                                    class="button1 border-0"><i class="fa fa-bar-chart"
+                                                        aria-hidden="true"></i> Ver
                                                     estatísticas</button></div>
                                             <div class="col-sm-12 col-md-12 col-lg-6"><button
-                                                    class="button2 border-0"><i class="fa fa-money" aria-hidden="true"></i> Doar</button></div>
+                                                    class="button2 border-0"><i class="fa fa-money"
+                                                        aria-hidden="true"></i> Doar</button></div>
                                         </div>
                                     </div>
 
@@ -164,7 +170,8 @@
                         <div class="cardMember">
                             <div class="row align-items-center">
                                 <div class="col-sm-12 col-md-6 col-lg-4">
-                                    <img class="cardMember-img" src="../image/Abner_Silva (5) (1).svg" alt="Abner Silva Barbosa">
+                                    <img class="cardMember-img" src="../image/Abner_Silva (5) (1).svg"
+                                        alt="Abner Silva Barbosa">
                                 </div>
                                 <div class="col-sm-12 col-md-6 col-lg-8">
                                     <p class="card-name"><strong>Abner Silva Barbosa</strong></p>
@@ -179,7 +186,8 @@
                         <div class="cardMember">
                             <div class="row align-items-center">
                                 <div class="col-sm-12 col-md-6 col-lg-4">
-                                    <img class="cardMember-img" src="../image/Gustavo_Ferreira_de_Oliveira (8).svg" alt="Gustavo Ferreira de Oliveira">
+                                    <img class="cardMember-img" src="../image/Gustavo_Ferreira_de_Oliveira (8).svg"
+                                        alt="Gustavo Ferreira de Oliveira">
                                 </div>
                                 <div class="col-sm-12 col-md-6 col-lg-8">
                                     <p class="card-name"><strong>Gustavo Ferreira de Oliveira</strong></p>
@@ -194,7 +202,8 @@
                         <div class="cardMember">
                             <div class="row align-items-center">
                                 <div class="col-sm-12 col-md-6 col-lg-4">
-                                    <img class="cardMember-img" src="../image/Julia_Rodrigues_Togni (10).svg" alt="Julia Rodrigues Togni">
+                                    <img class="cardMember-img" src="../image/Julia_Rodrigues_Togni (10).svg"
+                                        alt="Julia Rodrigues Togni">
                                 </div>
                                 <div class="col-sm-12 col-md-6 col-lg-8">
                                     <p class="card-name"><strong>Julia Rodrigues Togni</strong></p>
@@ -209,7 +218,8 @@
                         <div class="cardMember">
                             <div class="row align-items-center">
                                 <div class="col-sm-12 col-md-6 col-lg-4">
-                                    <img class="cardMember-img" src="../image/Rafael_Alves_Cabral (6).svg" alt="Rafael Alves Cabral">
+                                    <img class="cardMember-img" src="../image/Rafael_Alves_Cabral (6).svg"
+                                        alt="Rafael Alves Cabral">
                                 </div>
                                 <div class="col-sm-12 col-md-6 col-lg-8">
                                     <p class="card-name"><strong>Rafael Alves Cabral</strong></p>
@@ -224,7 +234,8 @@
                         <div class="cardMember">
                             <div class="row align-items-center">
                                 <div class="col-sm-12 col-md-6 col-lg-4">
-                                    <img class="cardMember-img" src="../image/Vitor_Zeferino (12) 1.svg" alt="Vitor Zeferino Queiroz">
+                                    <img class="cardMember-img" src="../image/Vitor_Zeferino (12) 1.svg"
+                                        alt="Vitor Zeferino Queiroz">
                                 </div>
                                 <div class="col-sm-12 col-md-6 col-lg-8">
                                     <p class="card-name"><strong>Vitor Zeferino Queiroz</strong></p>
